--- a/iterating_arrays_js.html
+++ b/iterating_arrays_js.html
@@ -4,5 +4,5 @@
     <meta charset="UTF-8">
     <title>ITERATING ARRAYS</title>
 </head>
-<body><script src = iterating.js></script></body>
+<body><script src = "JS/iterating.js"></script></body>
 </html>
