--- a/Functions_js.html
+++ b/Functions_js.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="conditionals-lecture.js"></script>
+<script src="JS/Functions.js"></script>
 </body>
 </html>
