--- a/Loops-lecture.html
+++ b/Loops-lecture.html
@@ -5,6 +5,6 @@
     <title>Loops Lecture</title>
 </head>
 <body>
-<script src="Loops-lecture.js"></script>
+<script src="JS/Loops-lecture.js"></script>
 </body>
 </html>
