--- a/conditionals-lecture.html
+++ b/conditionals-lecture.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="Functions.js"></script>
+<script src="JS/conditionals-lecture.js"></script>
 </body>
 </html>
