--- a/external_js.html
+++ b/external_js.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="external.js"></script>
+<script src="JS/external.js"></script>
 </body>
 </html>
