--- a/loops.html
+++ b/loops.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="conditionals.js"></script>
+<script src="JS/for_loops.js"></script>
 </body>
 </html>
