--- a/the-great-escape.html
+++ b/the-great-escape.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="the-great-escape.js"></script>
+<script src="JS/the-great-escape.js"></script>
 </body>
 </html>
