--- a/github.html
+++ b/github.html
@@ -1,48 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Github Layout</title>
-</head>
-<body>
-<img src="http://placeholder.pics/svg/30"></img>
-<ul>
-   <li>
-       <a href="#">Pull Requests</a>
-   </li>
-   <li>
-       <a href="#">Issues</a>
-   </li>
-   <li>
-       <a href="#">Marketplace</a>
-   </li>
-    <li>
-        <a href="#">Explore</a>
-    </li>
-    <br>
-</ul>
-<img src="http://placeholder.pics/svg/30"></img>
+    <head>
+        <meta charset="UTF-8">
+        <title>Github Layout</title>
+    </head>
+    <body>
+        <img src="http://placeholder.pics/svg/30"></img>
+        <ul>
+            <li>
+                <a href="#">Pull Requests</a>
+            </li>
+            <li>
+                <a href="#">Issues</a>
+            </li>
+            <li>
+                <a href="#">Marketplace</a>
+            </li>
+            <li>
+                <a href="#">Explore</a>
+            </li>
+            <br>
+        </ul>
+        <img src="http://placeholder.pics/svg/30"></img>
 
-<h1>Codeup</h1>
-<ul>
-    <li>
-        <a href ="#">Repos</a> 39
-    </li>
-    <li>
-        <a href ="#">People</a> 39
-    </li>
-    <li>
-        <a href ="#">Teams</a> 39
-    </li>
-    <li>
-        <a href ="#">Projects</a> 39
-    </li>
-     <li>
-         <a href ="#">Settings</a> 39
-     </li>
-</ul>
+        <h1>Codeup</h1>
+        <ul>
+            <li>
+                <a href="#">Repos</a> 39
+            </li>
+            <li>
+                <a href="#">People</a> 39
+            </li>
+            <li>
+                <a href="#">Teams</a> 39
+            </li>
+            <li>
+                <a href="#">Projects</a> 39
+            </li>
+            <li>
+                <a href="#">Settings</a> 39
+            </li>
+        </ul>
 
-Codeup's
+        Codeup's dev team
 
-</body>
+    </body>
 </html>
