--- a/CSS-practice.html
+++ b/CSS-practice.html
@@ -3,12 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Learning CSS</title>
-      <link rel="stylesheet" href="./main.css">
+      <link rel="stylesheet" href="css/main.css">
     </head>
     <body>
 <h1>Learning CSS</h1>
       <hr>
       <br>
       <p style="font-size: 24px">I am learning CSS today.</p>
+        <p class="pink border">I am learning CSS today.</p>
+        <p class="pink">I am learning CSS today.</p>
+        <p id="teal">I am learning CSS today.</p>
+        <p id ="yellow-border">I am learning CSS today.</p>
     </body>
 </html>
