--- a/functions_js.html
+++ b/functions_js.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<script src="JS/Functions.js"></script>
+<script src="JS/functions.js"></script>
 </body>
 </html>
