--- a/javascript-exercises.html
+++ b/javascript-exercises.html
@@ -5,6 +5,6 @@
     <title>Title</title>
 </head>
 <body>
-<scripts src="Javascript-exercises.js"></scripts>
+<scripts src="javascript-exercises.js"></scripts>
 </body>
 </html>
