--- a/dom-query-js.html
+++ b/dom-query-js.html
@@ -25,30 +25,76 @@
       culpa qui officia deserunt mollit anim id est laborum.
     </p>
 
+    <button type="button" id="btn1">Click Me!</button>
+    <button type="button" id="btn2" >Click Me!</button>
+    <button type="button" id="btn3">Click Me!</button>
+    <button type="button" id="btn4">Click Me!</button>
+    <button type="button" id="btn5">Click Me!</button>
+
     <script>
       (function() {
         "use strict";
         // TODO: Uncomment next line and get the main header element by id
+
         var mainHeader = document.getElementById('main-header');
 
         // TODO: Set inner html of mainHeader to "JavaScript is Cool"
-        document.getElementById('main-header').innerHTML = "JavaScript is Cool";
+        function changeHeader() {
+          var javaisCool = document.getElementById('main-header').innerHTML = "JavaScript is Cool";
+        }
+
+        document.getElementById("btn1").addEventListener("click", changeHeader);
 
         // TODO: Uncomment the next line and get the sub header element by id
-        // var subHeader = ;
+        var subHeader = document.getElementById('sub-header');
+        console.log(subHeader)
 
         // TODO: Set the text color of subHeader to blue
+       function changeColor() {
+         var blue = document.getElementById('sub-header').style.color = "blue";
+         console.log(blue)
+       }
+
+        document.getElementById("btn2").addEventListener("click",changeColor);
 
         // TODO: Uncomment the next line and get all list items
-        // var listItems = ;
+
+        var listItems = document.getElementsByTagName('li') ;
+        console.log(listItems);
 
         // TODO: Set text color on every other list item to grey
+
+        function changeToGrey() {
+
+          for (var i = 0; i < listItems.length; i++) {
+            if (i % 2 === 1) {
+              listItems[i].style.color = "grey";
+            }
+          }
+        }
+
+        document.getElementById("btn3").addEventListener("click",changeToGrey);
+
         // TODO: Set text color of li with dbid = 1 to blue
 
-        // TODO: Uncomment the next line and get all elements with class name sub-paragraph
-        // var subParagraphs = ;
+        function changeToBlue() {
+          listItems[0].style.color = "blue";
+        }
 
-        // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+        document.getElementById("btn4").addEventListener("click",changeToBlue);
+
+        // TODO: Uncomment the next line and get all elements with class name sub-paragraph
+         var subParagraphs =  document.getElementsByClassName("sub-paragraph");
+
+
+
+         // TODO: Change the text in the first sub paragraph to "Mission Accomplished!"
+        function missionAccomplished() {
+          subParagraphs[0].innerText = "Mission Accomplished!";
+        }
+
+        document.getElementById("btn5").addEventListener("click",missionAccomplished);
+
       })();
     </script>
   </body>
