--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -2,23 +2,50 @@
 <html lang="en">
     <head>
         <meta charset="UTF-8">
-      <link rel="stylesheet"
-            href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-            integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
-            crossorigin="anonymous">
+        <link rel="stylesheet"
+              href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
+              integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l"
+              crossorigin="anonymous">
         <title>Title</title>
     </head>
     <body>
+        <h1 class="codeup" id="Hello">Hello Everyone!!</h1>
+        <br>
+        <div class="codeup">
+            <h2>My Favorite Sports</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia
+                deserunt mollit anim id est laborum.
+            </p>
+        </div>
+        <br>
+        <div class ="codeup">
+            <h3 id="List">A list of my favorites</h3>
+            <ol>
+                <li class="FavSports">NFL Football</li>
+                <li class="FavSports">Basketball</li>
+                <li class="FavSports">Golf</li>
+                <li class="FavSports">College Football</li>
+            </ol>
+            <br>
+            <h3>A list of my least favorites</h3>
+            <ul>
+                <li class="LeastFav">Rugby</li>
+                <li class="LeastFav">Baseball</li>
+                <li class="LeastFav">Nascar</li>
+                <li class="LeastFav">Volleyball</li>
+            </ul>
+        </div>
 
-
-
-
-      <script src="https://code.jquery.com/jquery-2.2.4.min.js"
-              integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
-              crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
-              integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
-              crossorigin="anonymous"></script>
-      <script src="JS/jquery_exercises.js"></script>
+        <script src="https://code.jquery.com/jquery-2.2.4.min.js"
+                integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="
+                crossorigin="anonymous"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js"
+                integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF"
+                crossorigin="anonymous"></script>
+        <script src="JS/jquery_exercises.js"></script>
     </body>
 </html>
