--- a/jquery_exercises.html
+++ b/jquery_exercises.html
@@ -11,7 +11,7 @@
     <body>
         <h1 class="codeup" id="Hello">Hello Everyone!!</h1>
         <br>
-        <div class="codeup">
+        <div class="Sports">
             <h2>My Favorite Sports</h2>
             <p>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
@@ -22,7 +22,7 @@
             </p>
         </div>
         <br>
-        <div class ="codeup">
+        <div class ="sportList">
             <h3 id="List">A list of my favorites</h3>
             <ol>
                 <li class="FavSports">NFL Football</li>
