--- a/Konami.html
+++ b/Konami.html
@@ -1,30 +1,30 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <title>Konami Code</title>
-  </head>
-  <body>
-    <h1>Konami Code</h1>
+<!--<!DOCTYPE html>-->
+<!--<html>-->
+<!--  <head>-->
+<!--    <title>Konami Code</title>-->
+<!--  </head>-->
+<!--  <body>-->
+<!--    <h1>Konami Code</h1>-->
 
-    <script src="JS/jquery.js"></script>
-    <script>
-      "use strict";
+<!--    <script src="JS/jquery.js"></script>-->
+<!--    <script>-->
+<!--      "use strict";-->
 
-      $(document).keyup(function(e){
-        if (userInput === [38,38,40,40,37,39,37,39])
-          alert( 'You have added 30 lives! ');
-      });
-      // $( window ).keyup({
-      //   code : [38,38,40,40,37,39,37,39], // up up down down left right left right
-      //   cheat: function() {
-      //     alert( 'You have added 30 lives! ');
-      //   }
-      // });
+<!--      $(document).keyup(function(e){-->
+<!--        if (userInput === [38,38,40,40,37,39,37,39])-->
+<!--          alert( 'You have added 30 lives! ');-->
+<!--      });-->
+<!--      // $( window ).keyup({-->
+<!--      //   code : [38,38,40,40,37,39,37,39], // up up down down left right left right-->
+<!--      //   cheat: function() {-->
+<!--      //     alert( 'You have added 30 lives! ');-->
+<!--      //   }-->
+<!--      // });-->
 
-      // $(document).keyup(function(event){
-      //   console.log(event.keyCode);
-      // });
+<!--      // $(document).keyup(function(event){-->
+<!--      //   console.log(event.keyCode);-->
+<!--      // });-->
 
-    </script>
-  </body>
-</html>
+<!--    </script>-->
+<!--  </body>-->
+<!--</html>-->
