--- a/jquery-practice.html
+++ b/jquery-practice.html
@@ -21,6 +21,9 @@
             #main-title {
                 color : white;
             }
+            .list-group-item{
+                color: blue;
+            }
         </style>
     </head>
     <body>
@@ -138,7 +141,7 @@
                         <div class="d-grid my-2">
                             <button type="button" class="btn btn-primary" id="submitBtn">Submit
                             </button>
-                            <button type="button" class="btn btn-primary" id="resetBtn">Reset
+                            <button type="button" class="btn btn-primary" id="#redirect-url">Redirect
                             </button>
                         </div>
                     </form>
