--- a/mapbox_maps_api.html
+++ b/mapbox_maps_api.html
@@ -22,5 +22,6 @@
         <script src='https://api.mapbox.com/mapbox-gl-js/v2.3.0/mapbox-gl.js'></script>
         <script src="https://api.mapbox.com/mapbox-gl-js/plugins/mapbox-gl-geocoder/v4.7.0/mapbox-gl-geocoder.min.js"></script>
         <script src="JS/mapbox_maps_api.js"></script>
+        <script src="JS/keys.js"></script>
     </body>
 </html>
