--- a/promises.html
+++ b/promises.html
@@ -11,10 +11,13 @@
   <body>
     <h1>JS Promises using Fetch</h1>
     <img id="random-dog-image" height="400px" src="" alt="random-dog-img">
+    <div id="post">
+
+    </div>
     // get the right jquery file
     <script src="./jquery/jquery-2.2.4.js"></script>
     //point to your correct js file
-    <script src="./promises.js"></script>
+    <script src="JS/promises.js"></script>
   </body>
 </html>
 
